manifests/servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerotier-metrics
  namespace: zerotier-system
  labels:
    app.kubernetes.io/name: zerotier
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: zerotier
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
      protocol: TCP
